--- a/Application/Home/View/themes/Base/common.html
+++ b/Application/Home/View/themes/Base/common.html
@@ -5,7 +5,7 @@
 	<title>工合财富投资</title>
 	<include file="Public:head"/>
 </head>
-<body>
+<body onLoad="setup()">
 	<!--头部-->
 	<include file="Public:top"/>
 	<div class="pc">
