--- a/Application/Home/View/themes/Public/head.html
+++ b/Application/Home/View/themes/Public/head.html
@@ -4,7 +4,13 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>工合投富宝认购平台--最好的认购投资平台</title>
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Home/css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Home/css/jquery-ui.css"/>
+	
 	<script src="__PUBLIC__/Home/js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="__PUBLIC__/Home/js/jquery.js" type="text/javascript" charset="utf-8"></script>
 	<script src="__PUBLIC__/Home/js/public.js" type="text/javascript" charset="utf-8"></script>
 	<script src="__PUBLIC__/Static/layer/layer.js" type="text/javascript" charset="utf-8"></script>
+	<script src="__PUBLIC__/Home/js/provincial-cities-linkage.js" type="text/javascript" charset="utf-8"></script>
+	<script src="__PUBLIC__/Home/js/jquery.zclip.js" type="text/javascript" charset="utf-8"></script>
+	<script src="__PUBLIC__/Home/js/jquery-ui.js" type="text/javascript" charset="utf-8"></script>
 </head>
