--- a/Application/Home/View/themes/Public/top.html
+++ b/Application/Home/View/themes/Public/top.html
@@ -1,4 +1,4 @@
-	<block name="top">
+﻿	<block name="top">
 				<!--快捷通道	bar 开始-->
 		<div class="barOut">
 			<div class="bar">
@@ -45,7 +45,7 @@
 					<li><a href="{:U('Index/index')}" class="cur">首&nbsp;&nbsp;页</a></li>
 					<li><a href="{:U('Products/index')}">产品中心</a></li>
 					<li><a href="{:U('Transfer/index')}">转让中心</a></li>
-					<if condition="is_login()"><li><a href="{:U('User/index')}">个人中心</a></li></if>
+					<li><a href="{:U('User/index')}">个人中心</a></li>
 					<li><a href="{:U('Index/newguide')}">新手指南</a></li>
 				</ul>
 			</div>
