--- a/Application/Home/View/themes/User/yqtg.html
+++ b/Application/Home/View/themes/User/yqtg.html
@@ -21,7 +21,7 @@
 						<dd>							
 							<div class="yqhy_text1">
 								<span id="testcopy">http://www.ghcf.com</span>&nbsp;&nbsp;&nbsp;
-								<a href="#" id="copy"><embed width="62" height="24" align="middle" flashvars="txt=http://www.ghcf.com" src="js/copy.swf" quality="high" wmode="transparent" allowscriptaccess="sameDomain" pluginspage="http://www.adobe.com/go/getflashplayer" type="application/x-shockwave-flash" style=""></a>
+								<a href="#" id="copy"><embed width="62" height="24" align="middle" flashvars="txt=http://www.ghcf.com" src="__PUBLIC__/Home/js/copy.swf" quality="high" wmode="transparent" allowscriptaccess="sameDomain" pluginspage="http://www.adobe.com/go/getflashplayer" type="application/x-shockwave-flash" style=""></a>
 		
 								<!--复制代码-->       
 								<span id="url_box_clippy" style="display:none">http://www.ghcf.com</span>
