--- a/Application/Admin/View/themes/Public/left.html
+++ b/Application/Admin/View/themes/Public/left.html
@@ -103,7 +103,7 @@
                         </a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a href="#">产品发布</a>
+                                <a href="{:U('Product/product_launch')}">产品发布</a>
                             </li>
                             <li>
                                 <a href="#">产品列表</a>
