--- a/Application/Admin/View/themes/Public/head.html
+++ b/Application/Admin/View/themes/Public/head.html
@@ -30,6 +30,8 @@
     <!-- Data Tables -->
     <link href="__PUBLIC__/Admin/css/plugins/jqgrid/ui.jqgrid.css" rel="stylesheet">
 
+    <!-- 产品发布 -->
+    <link href="__PUBLIC__/Admin/css/plugins/steps/jquery.steps.css" rel="stylesheet">
 
     <!-- Flot -->
     <script src="__PUBLIC__/Admin/js/plugins/flot/jquery.flot.js"></script>
@@ -37,10 +39,6 @@
     <script src="__PUBLIC__/Admin/js/plugins/flot/jquery.flot.spline.js"></script>
     <script src="__PUBLIC__/Admin/js/plugins/flot/jquery.flot.resize.js"></script>
     <script src="__PUBLIC__/Admin/js/plugins/flot/jquery.flot.pie.js"></script>
-
-
-
-
 
     <!-- GITTER -->
     <script src="__PUBLIC__/Admin/js/plugins/gritter/jquery.gritter.min.js"></script>
@@ -58,18 +56,11 @@
 	<script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script>
     <script src="__PUBLIC__/Admin/js/plugins/iCheck/icheck.min.js"></script>
 
-    <!-- SUMMERNOTE -->
-    <script src="__PUBLIC__/Admin/js/plugins/summernote/summernote.min.js"></script>
-    <script src="__PUBLIC__/Admin/js/plugins/summernote/summernote-zh-CN.js"></script>
-    
-
     <script src="__PUBLIC__/Admin/js/plugins/flot/jquery.flot.symbol.js"></script>
     <script src="__PUBLIC__/Admin/js/plugins/flot/curvedLines.js"></script>
     <!-- Jvectormap -->
     <script src="__PUBLIC__/Admin/js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
     <script src="__PUBLIC__/Admin/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-    
-
 
     <!-- ChartJS-->
     <script src="__PUBLIC__/Admin/js/plugins/chartJs/Chart.min.js"></script>
@@ -111,9 +102,16 @@
     <!-- jQuery UI -->
     <script src="__PUBLIC__/Admin/js/plugins/jquery-ui/jquery-ui.min.js"></script>
 
+    <!-- Steps -->
+    <script src="__PUBLIC__/Admin/js/plugins/staps/jquery.steps.min.js"></script>
 
-
-
+    <!-- Jquery Validate -->
+    <script src="__PUBLIC__/Admin/js/plugins/validate/jquery.validate.min.js"></script>
+    <script src="__PUBLIC__/Admin/js/plugins/validate/messages_zh.min.js"></script>
+    
+        <!-- SUMMERNOTE -->
+    <script src="__PUBLIC__/Admin/js/plugins/summernote/summernote.min.js"></script>
+    <script src="__PUBLIC__/Admin/js/plugins/summernote/summernote-zh-CN.js"></script>
 
 </head>
 
