--- a/Application/Admin/View/themes/Public/left.html
+++ b/Application/Admin/View/themes/Public/left.html
@@ -49,7 +49,7 @@
 
                     </li>
                     <li>
-                        <a href="index.html#"> <i class="fa fa-bar-chart-o"></i>
+                        <a href="index.html#"> <i class="fa fa-user"></i>
                             <span class="nav-label">用户管理</span>
                             <span class="fa arrow"></span>
                         </a>
@@ -68,15 +68,12 @@
                             </li>
                             <li>
                                 <a href="{:U('User/teamlist')}">团队管理</a>
-                            </li>
-                            <li>
-                                <a href="{:U('User/friendlist')}">好友管理</a>
-                            </li>
+                            </li> 
                         </ul>
                     </li>
                     <li>
                         <a href="index.html#">
-                            <i class="fa fa-bar-chart-o"></i>
+                            <i class="fa fa-usd"></i>
                             <span class="nav-label">资金管理</span>
                             <span class="fa arrow"></span>
                         </a>
@@ -97,7 +94,7 @@
                     </li>
                     <li>
                         <a href="index.html#">
-                            <i class="fa fa-bar-chart-o"></i>
+                            <i class="fa fa-th-list"></i>
                             <span class="nav-label">产品管理</span>
                             <span class="fa arrow"></span>
                         </a>
@@ -115,7 +112,7 @@
                     </li>
                     <li>
                         <a href="index.html#">
-                            <i class="fa fa-bar-chart-o"></i>
+                            <i class="fa fa-bars"></i>
                             <span class="nav-label">订单管理</span>
                             <span class="fa arrow"></span>
                         </a>
@@ -125,9 +122,6 @@
                             </li>
                             <li>
                                 <a href="{:U('Orderinfo/works_list')}">订单业绩表</a>
-                            </li>
-                            <li>
-                                <a href="{:U('Orderinfo/order_going')}">订单跟踪</a>
                             </li>
                         </ul>
                     </li>
@@ -139,22 +133,22 @@
                         </a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a href="#">用户统计</a>
+                                <a href="{:U('Statistics/users')}">用户统计</a>
                             </li>
                             <li>
-                                <a href="#">产品统计</a>
+                                <a href="{:U('Statistics/products')}">产品统计</a>
                             </li>
                             <li>
-                                <a href="#">充值统计</a>
+                                <a href="{:U('Statistics/recharge')}">充值统计</a>
                             </li>
                             <li>
-                                <a href="#">提现统计</a>
+                                <a href="{:U('Statistics/withdraw')}">提现统计</a>
                             </li>
                             <li>
-                                <a href="#">推出资金统计</a>
+                                <a href="{:U('Statistics/out_money')}">推出资金统计</a>
                             </li>
                             <li>
-                                <a href="#">平台盈利统计</a>
+                                <a href="{:U('Statistics/income_money')}">平台盈利统计</a>
                             </li>
                         </ul>
                     </li>
@@ -182,7 +176,7 @@
                     </li>
                     <li>
                         <a href="index.html#">
-                            <i class="fa fa-bar-chart-o"></i>
+                            <i class="fa fa-wrench"></i>
                             <span class="nav-label">系统设置</span>
                             <span class="fa arrow"></span>
                         </a>
