--- a/Application/Admin/View/themes/User/adminlist.html
+++ b/Application/Admin/View/themes/User/adminlist.html
@@ -24,26 +24,6 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="ibox float-e-margins">
-                            <div class="ibox-title">
-                                <h5>基本 <small>分类，查找</small></h5>
-                                <div class="ibox-tools">
-                                    <a class="collapse-link">
-                                        <i class="fa fa-chevron-up"></i>
-                                    </a>
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#">
-                                        <i class="fa fa-wrench"></i>
-                                    </a>
-                                    <ul class="dropdown-menu dropdown-user">
-                                        <li><a href="table_data_tables.html#">选项1</a>
-                                        </li>
-                                        <li><a href="table_data_tables.html#">选项2</a>
-                                        </li>
-                                    </ul>
-                                    <a class="close-link">
-                                        <i class="fa fa-times"></i>
-                                    </a>
-                                </div>
-                            </div>
                             <div class="ibox-content">
 
                                 <table class="table table-striped table-bordered table-hover dataTables-example">
@@ -64,7 +44,7 @@
                                     </thead>
                                     <tbody>
                                     
-                                    <volist name="userdata" id="data">
+                                    <volist name="admindata" id="data">
                                     	<tr class="gradeA">
                                             <td class="center">{$data.id}</td>
                                             <td class="center">{$data.username}</td>
