--- a/Application/Home/View/themes/Public/footer.html
+++ b/Application/Home/View/themes/Public/footer.html
@@ -96,7 +96,7 @@
 						</form>
 						
 						
-						<p><a href="javascript:;" style="color: #E60000;">忘记密码？</a> | <a href="javascript:;">立即注册</a></p>
+						<p><a href="{:U('User/zhaohuidenglumima')}" style="color: #E60000;">忘记密码？</a> | <a href="javascript:;">立即注册</a></p>
 					</div>
 				</div>
 			</div>
