--- a/Application/Home/View/themes/User/login.html
+++ b/Application/Home/View/themes/User/login.html
@@ -23,7 +23,7 @@
 					<dd id="captcha-container"><input type="text" name="verify" id="" value="" placeholder="请输入验证码" class="yzm"/><img src="{:U('User/verify',array())}" width="70px" height="33px"/></dd>
 				</dl> -->
 				<input type="submit" id="" value="登&nbsp;&nbsp;录" class="logBtn"/>
-				<p><a href="javascript:;" style="color: #E60000;">忘记密码？</a> | <a href="javascript:;">立即注册</a></p>
+				<p><a href="{:U('User/zhaohuidenglumima')}" style="color: #E60000;">忘记密码？</a> | <a href="javascript:;">立即注册</a></p>
 			</div>
 		</form>
 			<div class="logR">
