--- a/Application/Home/View/themes/Index/newdetail.html
+++ b/Application/Home/View/themes/Index/newdetail.html
@@ -17,17 +17,9 @@
 			<div class="aboutR">
 				<!--新闻详情		News Details  start-->
 				<div class="newsDetails">
-					<h3>工行创新推出个人综合积分服务</h3>
+					<h3>{$art.title}</h3>
 					<p class="time">发布时间：2014-06-09 浏览 18 次</p>
-					<p>中国经济网北京6月9日讯 记者今天从中国工商银行获悉，近期工行在国内率先推出借记卡积分，并与原有的工行信用卡积分服务进行整合，创新推出了个人综合积分服务。这意味着客户使用工行信用卡和借记卡刷卡消费均可以累积积分，改变了过去只有信用卡消费才能积分的状况，为客户带来了实实在在的优惠。统计显示，目前工行借记卡持卡客户约为3.1亿，个人综合积分服务推出后享受积分优惠的工行持卡客户将从原来的5000万信用卡客户扩大到3.6亿个人客户，覆盖了全国将近三分之一的人群。</p>
-	        <p>根据工行个人综合积分服务规则，客户持有工行的任意一张银行卡，在符合积分条件的商户刷卡消费便可累积积分，每消费1元人民币积1分。积分可以在工行“融e购”网上商城消费，或者在工行的线下POS合作商户兑换商品或服务。</p>
-	         <p>工行银行卡积分的另一大亮点是能够在“融e购”商城直接抵扣现金使用，含金量非常高。“融e购”是工行精心打造的网上商城，汇集各类“名商、名品、名店”，目前上线产品已覆盖十几个行业、两万多件畅销商品。客户登录工行“融e购”后，便可使用自己的综合积分抵扣现金进行购物。而过去的银行信用卡积分往往只能根据积分多少兑换指定的商品，选择的余地很小，热门的兑换商品还常常出现断货的情况。而工行“融e购”不仅商品种类丰富，而且客户可以直接用积分抵扣现金，最高可以抵扣相当于商品价格一半的现金。同时,工行还为客户免费提供了积分变动提醒短信服务，客户可在第一时间了解积分变化情况及余额情况。</p>
-	        <p>工行相关负责人表示，综合积分是工行为回馈客户和促进居民消费推出的一项重要举措。下一步，工行还将持续开展“积分当钱花”、“积分微慈善”等系列积分推广活动，不断拓展积分兑换范围，让更多的客户享受综合积分带来的实惠。</p>
-		 <p>中国经济网北京6月9日讯 记者今天从中国工商银行获悉，近期工行在国内率先推出借记卡积分，并与原有的工行信用卡积分服务进行整合，创新推出了个人综合积分服务。这意味着客户使用工行信用卡和借记卡刷卡消费均可以累积积分，改变了过去只有信用卡消费才能积分的状况，为客户带来了实实在在的优惠。统计显示，目前工行借记卡持卡客户约为3.1亿，个人综合积分服务推出后享受积分优惠的工行持卡客户将从原来的5000万信用卡客户扩大到3.6亿个人客户，覆盖了全国将近三分之一的人群。</p>
-	        <p> 根据工行个人综合积分服务规则，客户持有工行的任意一张银行卡，在符合积分条件的商户刷卡消费便可累积积分，每消费1元人民币积1分。积分可以在工行“融e购”网上商城消费，或者在工行的线下POS合作商户兑换商品或服务。</p>
-	         <p>工行银行卡积分的另一大亮点是能够在“融e购”商城直接抵扣现金使用，含金量非常高。“融e购”是工行精心打造的网上商城，汇集各类“名商、名品、名店”，目前上线产品已覆盖十几个行业、两万多件畅销商品。客户登录工行“融e购”后，便可使用自己的综合积分抵扣现金进行购物。而过去的银行信用卡积分往往只能根据积分多少兑换指定的商品，选择的余地很小，热门的兑换商品还常常出现断货的情况。而工行“融e购”不仅商品种类丰富，而且客户可以直接用积分抵扣现金，最高可以抵扣相当于商品价格一半的现金。同时,工行还为客户免费提供了积分变动提醒短信服务，客户可在第一时间了解积分变化情况及余额情况。</p>
-	        <p>工行相关负责人表示，综合积分是工行为回馈客户和促进居民消费推出的一项重要举措。下一步，工行还将持续开展“积分当钱花”、“积分微慈善”等系列积分推广活动，不断拓展积分兑换范围，让更多的客户享受综合积分带来的实惠。</p>
-	        
+					{$art.content}
 				</div>
 				<!--新闻详情		news  end-->	
 				<div class="upDown">
