--- a/Application/Home/View/themes/Public/footer.html
+++ b/Application/Home/View/themes/Public/footer.html
@@ -7,7 +7,7 @@
 				<div class="top">
 					<ul>
 						<li>
-							<h4>关于我们</h4>
+							<h4><a href="{:U('Index/me')}">关于我们</a></h4>
 							<p><a href="javasvript:;">公司简介</a></p>
 							<p><a href="javasvript:;">服务项目</a></p>
 							<p><a href="javasvript:;">核心优势</a></p>
@@ -96,7 +96,7 @@
 						</form>
 						
 						
-						<p><a href="{:U('User/zhaohuidenglumima')}" style="color: #E60000;">忘记密码？</a> | <a href="javascript:;">立即注册</a></p>
+						<p><a href="{:U('User/zhaohuidenglumima')}" style="color: #E60000;">忘记密码？</a> | <a href="{:U('User/register')}">立即注册</a></p>
 					</div>
 				</div>
 			</div>
