--- a/Application/Home/View/themes/User/register.html
+++ b/Application/Home/View/themes/User/register.html
@@ -50,7 +50,7 @@
 				<!--registerBotL end-->
 				<!--registerBotR start-->
 				<div class="registerBotR">
-					<p>已有账号？<br /><a href="javascr"> 点击登录</a></p>
+					<p>已有账号？<br /><a href="{:U('User/login')}"> 点击登录</a></p>
 				</div>
 				<!--registerBotR end-->
 			</div>
