--- a/Application/Home/View/themes/Index/newlist.html
+++ b/Application/Home/View/themes/Index/newlist.html
@@ -17,17 +17,10 @@
 			<div class="aboutR">
 				<!--网站公告列表  	start-->
 				<div class="aboutList tab">
-					<ul>				
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>		
+					<ul>
+						<foreach name='art' item='vo'>
+							<li><a href="{:U('Index/newdetail?id='.$vo['id'])}"><strong>{$vo.title}</strong></a></li>
+						</foreach>				
 					</ul>
 				</div>
 				<!--网站公告列表  end-->
@@ -35,16 +28,9 @@
 				<!--新闻动态列表		start-->
 				<div class="aboutList tab" style="display: none;">
 					<ul>				
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>
-						<li><a href="javasctipt:;"><strong>关于2015年6月27日（周六）凌晨00：00至3：30进行系统升级绿能宝</strong><b>2015-07-12</b></a></li>		
+						<foreach name='art' item='vo'>
+							<li><a href="{:U('Index/newdetail?id='.$vo['id'])}"><strong>{$vo.title}</strong></a></li>
+						</foreach>			
 					</ul>
 				</div>
 				<!--新闻动态列表   	start-->
