--- a/Application/Home/View/themes/User/zhaohuidenglumima.html
+++ b/Application/Home/View/themes/User/zhaohuidenglumima.html
@@ -1,49 +1,6 @@
 	<include file="Public:head"/>
 	<!--头部-->
-
-		<!--快捷通道	bar 开始-->
-		<div class="barOut">
-			<div class="bar">
-				<!--barLeft start-->
-				<div class="barLeft">
-					<p>欢迎来到工合财富！&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;请</p>
-					<a href="javascript:;" class="DL">[ 登录 ]</a>   <!--  点击出现登录弹出框，而不是登录页面     -->                                                               
-					<a href="zhuce.html" class="ZC">[ 注册 ]</a>
-				</div>
-				<!--barLeft end-->
-				
-				<!--barRight start-->
-				<div class="barRight">
-					<p><img src="images/hotline.png"/></p>
-					<a href="http://weibo.com/u/5385565766?topnav=1&wvr=6&topsug=1" target="_blank" class="sina"> </a>
-					<a href="tencent://message/?uin=3058467611" class="qq"> </a>
-					<a href="javasvript:;" class="wx"> </a>
-				</div>
-				<!--barRight end-->
-				
-				<!--鼠标划上效果	开始-->
-				<div class="sinaCode"><img src="images/sinaCode.png"/></div>
-				<div class="qqCode"><img src="images/qqCode.jpg"/></div>
-				<div class="wxCode"><img src="images/wxCode.jpg" width="100" height="100"/></div>
-				<!--鼠标划上效果 	结束-->
-			</div>
-		</div>
-		<!--快捷通道	bar 结束-->
-		
-		<!--导航栏	nav 开始-->
-		<div class="navOut">
-			<div class="nav">
-				<h1 class="navL"><a href="index.html"><img src="images/logo.png"/></a></h1>
-				<ul class="navR">
-					<li><a href="index.html" class="cur">首&nbsp;&nbsp;页</a></li>
-					<li><a href="chanpinzhongxin.html">产品中心</a></li>
-					<li><a href="zhuanrangzhongxin.html">转让中心</a></li>
-					<li><a href="gerenzhongxin.html">个人中心</a></li>
-					<li><a href="xinshouzhinan.html">新手指南</a></li>
-				</ul>
-			</div>
-		</div>
-		<!--导航栏	nav 结束-->
+	<include file="Public:top"/>
 		
 		<!--找回密码		Forgot your password   start-->
 		<div class="forgPass">
