--- a/Application/Home/View/themes/Index/index.html
+++ b/Application/Home/View/themes/Index/index.html
@@ -50,7 +50,7 @@
 				<ul class="dataR">
 					<li class="li01"><a href="javascript:;">理财产品</a></li>
 					<li class="li02"><a href="javascript:;">官方微信</a></li>
-					<li class="li03"><a href="javascript:;">新手产品</a></li>
+					<li class="li03"><a href="javascript:;">定向产品</a></li>
 					<li class="li04"><a href="http://weibo.com/u/5385565766?topnav=1&wvr=6&topsug=1" target="_blank">官方微博</a></li>
 				</ul>
 				<!--dataR end-->
