--- a/Application/Home/View/themes/Index/newguide.html
+++ b/Application/Home/View/themes/Index/newguide.html
@@ -16,7 +16,7 @@
 				<!--新手指引内容-->
 				<div class="tab">
 					<ul class="new">
-						<li><b>·</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;首页点击<a href="javascript:;">【注册】</a>，只需填写手机号或邮箱，设置好密码 就可以完成注册啦。</li>
+						<li class="one"><b>·</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;首页点击<a href="javascript:;">【注册】</a>，只需填写手机号或邮箱，设置好密码 就可以完成注册啦。</li>
 						<li class="two"><b>·</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注册成功后,进入<a href="javascript:;">【个人中心】</a>，在<b>【安全中心】</b>-<a href="javascript:;">【认证管理】</a>里，进行相应认证 以及 设置或修改交易密码、登录密码。</li>
 						<li class="three"><b>·</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;进入<a href="javascript:;">【产品中心】</a>，选择产品，进入产品详情，之后点<b>【立即购买】</b>， 选定购买数量，并且勾住<a href="javascript:;">《委托融资租赁合同（自然人）》</a>，最后 点击<b>【提交订单】</b>。<br />在此之前，必须<a href="javascript:;">【绑定银行卡】</a>或者确保<b>余额充足</b>。</li>
 						<li class="four"><b>·</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;支付完成后，回到<a href="javascript:;">【个人中心】</a>，点击<b>【产品中心】</b>-<a href="javascript:;">【交易记录】</a>， 即可查到您所购买的产品。</li>
