--- a/Application/Home/View/themes/Public/footer.html
+++ b/Application/Home/View/themes/Public/footer.html
@@ -88,15 +88,15 @@
 							<dl>
 								<dt><img src="__PUBLIC__/Home/images/loginYzm.gif"/></dt>
 								<dd id="captcha-container_f">
-								<input name="verify" width="50%" height="50" class="yzm" placeholder="验证码" type="text">
-  								<img alt="验证码" src="{:U('User/verify',array())}" title="点击刷新">
+									<input name="verify" width="50%" height="50" class="yzm" placeholder="验证码" type="text">
+  									<img alt="验证码" src="{:U('User/verify',array())}" title="点击刷新" height="50" width="144">
 								</dd>
 							</dl>
 							<input type="button" id="subbt" value="" class="loginBtn"/>
 						</form>
 						
 						
-						<p><a href="{:U('User/zhaohuidenglumima')}" style="color: #E60000;">忘记密码？</a> | <a href="{:U('User/register')}">立即注册</a></p>
+						<p><a href="javascript:;" style="color: #E60000;">忘记密码？</a> | <a href="{:U('User/register')}">立即注册</a></p>
 					</div>
 				</div>
 			</div>
