--- a/Application/Home/View/themes/Public/top.html
+++ b/Application/Home/View/themes/Public/top.html
@@ -42,7 +42,7 @@
 			<div class="nav">
 				<h1 class="navL"><a href="index.html"><img src="__PUBLIC__/Home/images/logo.png"/></a></h1>
 				<ul class="navR">
-					<li><a href="{:U('Index/index')}" class="cur">首&nbsp;&nbsp;页</a></li>
+					<li class="cur"><a href="{:U('Index/index')}">首&nbsp;&nbsp;页</a></li>
 					<li><a href="{:U('Products/index')}">产品中心</a></li>
 					<li><a href="{:U('Transfer/index')}">转让中心</a></li>
 					<li><a href="{:U('User/index')}">个人中心</a></li>
