--- a/Application/Home/View/themes/Index/index.html
+++ b/Application/Home/View/themes/Index/index.html
@@ -124,7 +124,7 @@
 											<div class="out"><div class="in"></div></div>
 											<div class="perc">( 26.7% )</div>
 										</li> 
-										<li class="last"><a href="javascript:;" class="btn">查看详情</a></li>
+										<li class="last"><a href="{:U('Products/chanpinxiangqing')}" class="btn">查看详情</a></li>
 									</ul>
 								</div>
 						    </foreach>
