--- a/Application/Home/View/themes/Products/index.html
+++ b/Application/Home/View/themes/Products/index.html
@@ -70,7 +70,7 @@
 						<strong>（26.7%）</strong>
 					</li>
 					<li>发布时间：2015-06-10</li>
-					<li><input type="button" name="" id="" value="立即购买" class="prodConBtn"/></li>
+					<li><a href="{:U('Products/chanpinxiangqing')}"><input type="button" name="" id="" value="立即购买" class="prodConBtn"/></a></li>
 				</ul>
 			</div>
 			
